--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,6 +1,6 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://mysqls/test
+spring.datasource.url=jdbc:mysql://mysql/test
 spring.datasource.username=root
 spring.datasource.password=root
  # Uncomment this the first time the app runs
