--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ management.contextPath=/manage
 management.security.enabled=false
 
 # Logging
-logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.context.annotation=TRACE
 
 # Active Spring profiles
 spring.profiles.active=production
