--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   mysql:
-   image: mysql
+   image: mysql:5.7.8
    ports:
     - "3306:3306"
    networks:
     - petclinic
    environment:
-    - MYSQL_ROOT_PASSWORD=root
-    - MYSQL_DATABASE=test
+    - MYSQL_ROOT_PASSWORD=petclinic
+    - MYSQL_DATABASE=petclinic
    volumes:
     - "./conf.d:/etc/mysql/conf.d:rw"
   spring:
