--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
+      <version>5.1.45</version>
     </dependency>
 
     <!-- caching -->
