--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,8 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=jdbc:mysql://mysql/petclinic
+spring.datasource.url=jdbc:mysql://localhost/petclinic
 spring.datasource.username=root
 spring.datasource.password=petclinic
- # Uncomment this the first time the app runs
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Uncomment this the first time the app runs
 #spring.datasource.initialize=false
