--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # database init, supports mysql too
+#database=mysql
+#spring.datasource.schema=classpath*:db/${database}/schema.sql
+#spring.datasource.data=classpath*:db/${database}/data.sql
 database=mysql
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
-
+spring.datasource.url=jdbc:mysql://mysql:3306/petclinic
+spring.datasource.username=root
+spring.datasource.password=petclinic
 # Web
 spring.thymeleaf.mode=HTML
 
@@ -18,9 +21,9 @@ management.contextPath=/manage
 management.security.enabled=false
 
 # Logging
-logging.level.org.springframework=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.context.annotation=TRACE
+logging.level.org.springframework=INFO
+#logging.level.org.springframework.web=TRACE
+#logging.level.org.springframework.context.annotation=TRACE
 
 # Active Spring profiles
 spring.profiles.active=production
