--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,15 @@ services:
    volumes:
     - "./conf.d:/etc/mysql/conf.d:rw"
     - "./conf.d/data:/var/lib/mysql"
-  #spring:
-  #  image: apetrovya/spring-petclinic:1.2.7
-  #  ports:
-  #   - "8080:8080"
-  #  networks:
-  #   - petclinic
-  #  depends_on:
-  #   - mysql
+  spring:
+    image: apetrovya/spring-petclinic:1.2.7
+    #ports:
+    # - "8080:8080"
+    #networks:
+    # - petclinic
+    network_mode: host
+    depends_on:
+     - mysql
 #networks:
 #  petclinic:
     
