--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3'
 services:
   mysql:
    image: mysql:5.7.8
-   #ports:
-   # - "3306:3306"
+   ports:
+    - "3306:3306"
    #networks:
    # - petclinic
-   network_mode: host
+   #network_mode: host
    environment:
     - MYSQL_ROOT_PASSWORD=petclinic
     - MYSQL_DATABASE=petclinic
@@ -14,12 +14,12 @@ services:
     - "./conf.d:/etc/mysql/conf.d:rw"
     - "./conf.d/data:/var/lib/mysql"
   spring:
-    image: apetrovya/spring-petclinic:1.2.7
-    #ports:
-    # - "8080:8080"
+    image: apetrovya/spring-petclinic:1.2.9
+    ports:
+     - "8080:8080"
     #networks:
     # - petclinic
-    network_mode: host
+    #network_mode: host
     depends_on:
      - mysql
 #networks:
